flux/apps/ai/llm/catalog/gpt-oss-20b/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gpt-oss-20b-ai
spec:
  parentRefs:
    - name: agenticgateway-internal
      namespace: agenticgateway
      sectionName: https
  hostnames:
    - ai.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/chat/completions
          headers:
            - type: Exact
              name: X-Gateway-Model-Name
              value: openai/gpt-oss-20b
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: deepinfra
